# PB_Testing

./: MANIFEST.in  Pipfile  README.md  config.ini  da  environment.py  help_in_browser.py  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.html  test.py
.eggs/: atomicwrites-1.4.1-py3.8.egg
core/: adding.py
features/: checking_maintenance_mode.feature  creating_questions_as_dean.feature  dad.feature  dady.feature  example.feature  hi.feature  huhi.feature  logging_as_admin.feature  logging_as_dean.feature  login.feature  math_operators.feature  name_for_file.feature  new_test.feature  new_test.feature.feature  newest-test.feature  something.file.feature  temp.feature  testing_another_site.feature  testing_another_site_with_common_steps.feature  testing_common_steps_with_one_site.feature  testing_select.feature
pb_testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resources_for_testing/: config.ini  config.ini.pickle  handy.sqlite  ids.txt  ruby.pb_config  ruby.pb_config.pickle  saved_configuration.pb_config  saved_configuration.pb_config.pickle  testing_assertion.pb_config.pickle  url.txt  urls.txt
resources_for_testing/saved_plans/: creating_questions_category.pb_config  creating_questions_category.pb_config.pickle  keksd.pb_config.pickle  kekw_wygrzmoci_sie.pb_config  (+5 more)
steps/: common_steps.py  common_steps_pb_testing.py  login_steps.py  math_operators.py  new_actions.py  new_steps.py
tests/: test_django_importer.py  test_helper_methods.py  test_my_functions.py  test_scenario.py  test_site_info.py  test_website_tag.py
(+105 files in other folders)
