[metadata]
name = pb_testing
version = 0.2.0.1
author = Me3eh
author_email = bociukmeeeh@gmail.com
description = BDD + POM testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/me3eh/POM_BiDiDi
project_urls =
    Bug Tracker = https://github.com/me3eh/POM_BiDiDi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src